[tool.poetry]
name = "user-management"
version = "0.1.0"
description = ""
authors = ["Noam <noampolak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.37"
alembic = "^1.14.1"
uvicorn = "^0.34.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2 = "^2.9.10"
bcrypt = "4.0.1"
pyjwt = "^2.10.1"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
